--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
 	  <link rel="icon" type="image/png" href="images/land4.jpg">
 	  <link rel="stylesheet" type="text/css" href="css/style.css">
+	  <link rel="stylesheet" type="text/css" href="css/all.css">
     </head>
 <body>
 	<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
@@ -77,29 +78,29 @@
  					<div class="wpb_text_column wpb_content_element">
  						<div class="wpb_wrapper">
  							<p>
- 								<span class="fas fas-compass"></span>
- 								27 lasu expres road,lagoos, 
+ 								<i class="fas fa-compass"></i>
+ 								27 lasu expres road,lagos, 
  								Nigeria.
  							</p>
  							<p>
  								<a href="tel:08150502458">
- 									<span class="fas fa-phone"></span>08150502458</a>
+ 									<i class="fas fa-phone"></i>08150502458</a>
  							</p>
  							<p>
- 								<span class="fas fa-evelope"></span>
+ 								<i class="fas fa-envelope"></i>
  								<a href="mailto:fashionhouse@gmail.com">fashionhouse@gmail.com</a>
  							</p>
  							<p>
  								<a href="http://www.instagram.com/fashionhouse" target="_blank">
- 									<span class="fab fa-instragam"></span> @fashionhouse</a>
+ 									<i class="fab fa-instagram"></i>@fashionhouse</a>
  							</p>
  							<p>
  								<a href="http://www.facebook.com/fashionhouse/" target="_blank">
- 								<span class="fab fa-facebook"></span> Fashionhouse</a>
+ 								<i class="fab fa-facebook"></i> Fashionhouse</a>
  							</p>
  							<p>
  								<a href="http://www.twitter.com/@Fashionhouse789" target="_blank">
- 								<span class="fab fa-twitter"></span> Fashionhouse789</a>
+ 								<i class="fab fa-twitter"></i> Fashionhouse789</a>
  							</p>
  						</div>
  					</div>
@@ -112,15 +113,19 @@
 
 	
 	<footer>
-		<a href="https://www.facebook.com/fashionhouse" target="_blank">
-			<img src="images/facebook.png" title="facebook" height="75" width="75"/>
-		</a>
-		<a href="https://www.instagram.com/fashionhouse" target="_blank">
-			<img src="images/instagram.png" title="instagram" height="75" width="75"/>
-		</a>
-		<a href="https://www.twitter.com/fashionhouse" target="_blank">
-			<img src="images/twitter.png" title="twitter" height="75" width="75"/>
-		</a>
+		<div>
+
+		 <a href="http://www.twitter.com/@Fashionhouse789">
+ 		 <span class="fab fa-twitter"></span></a>
+
+ 	     <a href="http://www.facebook.com/fashionhouse/">
+ 		 <span class="fab fa-facebook"></span></a>
+
+ 		 <a href="http://www.instagram.com/@Fashionhouse789">
+ 		 <span class="fab fa-instagram"></span></a>
+
+		</div>
+		
 		<p>&copy 2020 fashion house. All Rights Reserved.</p>
 		<p>Designed by Omoloye Oluwatobi</p>
 	</footer>	
